--- a/vignettes/E.rmd
+++ b/vignettes/E.rmd
@@ -59,6 +59,8 @@ nbModFun <- function(tp=NULL, fp=NULL, FPwt=NULL) {
 ```
 
 ## Custom function to compute the clinical utility results for a classification prediction model.
+
+**Note** The variable 'level' with values 1-7 refers to the seven selected threshold probabilities (level = 1 = 0.5%, ..., level = 7 = 2%).
 ```{r echo=TRUE, eval = FALSE}
 # Argument confMatDf = confusion matrix data.frame. That is, confMatDf contains 10 columns, 8 of which comprise the confusion matrix or are directly computed on the basis of the confusion matrix, e.g., sensitivity.
 computeResults <- function(confMatDf=NULL) {
